# easyissues-backend

./: .flake8  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  keys.txt  pyproject.toml
.github/workflows/: ci.yml
database/: README.md
database/postgresql/: seed_data.sql  tables.sql
src/: main.py
src/api/: health_controller.py
src/api/v1/: repo_controller.py
src/configs/: app_settings.py  config.py
src/dependency/: database.py
src/llm/: README.md  demo-APIs.py
src/models/: health_models.py  repo_models.py
src/repository/dao/: base_dao.py  health_dao.py  repo_dao.py
src/repository/entity/: db_entities.py
src/services/: ihealth_service.py
src/services/impl/: health_service.py  repo_service.py
src/utils/: constants.py  decorators.py
