[project]
name = "easyissues-backend"
version = "0.1.0"
description = "EasyIssues backend"
authors = [
    {name = "thejaswiamarendra",email = "thejaswia03@gmail.com"}
]
packages = [{ include = "src" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
