[project]
name = "easyissues-backend"
version = "0.1.0"
description = "EasyIssues backend"
authors = [
    {name = "thejaswiamarendra",email = "thejaswia03@gmail.com"}
]
packages = [{ include = "src" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "sqlalchemy (>=2.0.42,<3.0.0)",
    "logging (>=0.4.9.6,<0.5.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "asyncpg (>=0.30.0,<0.31.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
